styles.css
@import"https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap";
*,*:before,*:after {
    box-sizing: border-box;
    margin: 0;
    position: relative;
}
:root,
    :root.mumei {
    --background-color: rgb(145, 108, 100);
    --card-color: rgb(200, 160, 110);
    --text-color-dark: rgb(92, 42, 36);
    --text-color-light: rgb(255, 215, 170);
    }
    :root.bae {
        --background-color: rgb(224, 115, 90);
        --card-color: rgb(255, 223, 223);
        --text-color-dark: rgb(92, 42, 36);
        --text-color-light: rgb(214, 160, 143);
        }
.image-container {
    display: flex;
    width: 200px;
    height: 200px;
    margin: auto; /*Centers horizontally*/
    margin-bottom: 20px;
    flex-direction: row;
}
.image-container a{
    align-self: flex-end;
}
#clickableImage {
    width: 100%;
    height: 100%;
    transition: transform 0.3s, filter 0.3s; /* Smooth transition */
    filter: grayscale(100%); /* Convert image to grayscale */
}
#clickableImage:hover {
    transform: scale(1.1); /* Scale image by 10% on hover */
    filter: grayscale(0%); /* Remove grayscale filter on hover */
}
#altClickableImage {
    width: 90;
    height: 90;
    transition: transform 0.3s, filter 0.3s; /* Smooth transition */
    filter: grayscale(100%); /* Convert image to grayscale */
    
    align-self: flex-end;
}
#altClickableImage:hover {
    transform: scale(1.1); /* Scale image by 10% on hover */
    filter: grayscale(0%); /* Remove grayscale filter on hover */
}
header {
    color: var(--text-color-light);
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    text-rendering: optimizeLegibility;
}
body {
    margin: 0;
    background-color: var(--background-color);
    color: var(--text-color-light);
    text-align: center;
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    text-rendering: optimizeLegibility;
}
h1 a {
    color: inherit; /* Use the color of the parent element */
    text-decoration: underline transparent;
    transition: text-decoration 0.3s ease;
}
h1 a:hover {
    text-decoration: underline;
}
.card {
    border: 0px solid #ccc;
    border-radius: 0.8rem;
    padding: 2rem;
    padding-left: calc(2rem + 25px);
    padding-right: calc(2rem + 25px);
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
    background-color: var(--card-color);
    max-width: 40rem; /* Change max-width to adjust size */
    margin: 15px auto;
    height: auto;
}
@media screen and (max-width: calc(40rem + 30px) ) {
    .card {
        margin: 15px 15px;
    }
}
@media screen and (max-width: calc(35rem) ) {
    #subs, #views {
        float: none;
        text-align: center;
        width: 100%; /* Make the headings occupy full width */
    }
    #horizontalDivider {
        display: none;
    }
}
.card h2 {
    font-size: 3rem;
    color: var(--text-color-dark);
    margin-bottom: 10px;
}
.card p {
    font-size: 2.5rem;
    color: var(--text-color-dark);
}
#subs {
    float: left;
}
#views {
    float: right;
}
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}
#horizontalDivider {
    position: absolute;
    top: 20;
    bottom: 20;
    left: 50%; /* Position the divider in the middle */
    width: 2px; /* Set the width of the divider */
    background-color: var(--text-color-dark); /* Choose the color of the divider */
    transform: translateX(-50%);  /*Center the divider horizontally */
}
#apiKeySubmitButton {
    background: var(--text-color-dark);
    color: var(--text-color-light);
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    font-size: 1.5rem;
    border-radius: 1rem;
    padding: 5px 10px;
}
#apiKeyInputBox {
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    font-size: 1.5rem;
    margin: .5rem;
    border-radius: .4rem;
    text-align: center;
}

#livestreamDisplay {
    padding: .5rem 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.card-image {
    display: block;
    width: 100%;
    height: auto;
    border-radius: 0.8rem;
}
p.top-left-text {
    margin-bottom: 5px;
    font-size: 1.75rem;
}
#livestreamInfoDisplay {
    padding: .5rem 0rem 0rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
p.bottom-left-text {
    margin: 0;
    align-self: flex-start;
    font-size: 1.5rem;
}
#livestreamButtonDisplay {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.button {
    appearance: none;
    -webkit-appearance: none;
    max-width: fit-content;
    padding: 6px 6px;
    border-radius: 12px;
    border-width: 2;
    background-color: var(--text-color-dark);
    color: var(--text-color-light);
    text-decoration: none;
    align-self: flex-start;
    margin-left: 5;
    border-color: var(--text-color-dark);
}
.select {
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    color: var(--text-color-light);
    background-color: transparent;
    padding: 5px;
    border: none;
    -webkit-appearance: none;
    appearance: none;
    text-align: center;
    font-size: 8rem;
    font-weight: 400;
    margin: -1rem;
} 
.select option {
    font-size: 4rem;
    text-align: center;
    background: var(--background-color);
    -webkit-appearance: none;
    appearance: none;

}
select:focus{
    outline:none;
}

